--- a/src/popup.html
+++ b/src/popup.html
@@ -1,57 +1,121 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Custom Whisper Dictation</title>
+    <title>Whisper Dictation</title>
     <style>
       body {
-        font-family: Arial, sans-serif;
-        padding: 10px;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          sans-serif;
+        padding: 15px;
         width: 300px;
+        margin: 0;
+        background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+        color: #333;
+        transition: background 0.3s, color 0.3s;
+      }
+      body.dark {
+        background: linear-gradient(135deg, #2a2a2a 0%, #4a4a4a 100%);
+        color: #e0e0e0;
+      }
+      h3 {
+        margin: 0 0 15px;
+        font-size: 18px;
+        font-weight: 600;
+        text-align: center;
+        text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
       }
       label {
         display: block;
-        margin: 5px 0;
+        margin: 5px 0 2px;
+        font-size: 12px;
+        font-weight: 500;
+        color: inherit;
       }
       input {
         width: 100%;
-        padding: 5px;
-        margin-bottom: 10px;
+        padding: 8px;
+        margin-bottom: 12px;
+        border: 1px solid #ccc;
+        border-radius: 6px;
+        box-sizing: border-box;
+        font-size: 14px;
+        background: rgba(255, 255, 255, 0.9);
+        box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.05);
+        transition: border-color 0.2s, box-shadow 0.2s;
+      }
+      body.dark input {
+        border-color: #666;
+        background: rgba(40, 40, 40, 0.9);
+        color: #e0e0e0;
+      }
+      input:focus {
+        border-color: #4caf50;
+        box-shadow: 0 0 5px rgba(76, 175, 80, 0.3);
+        outline: none;
       }
       button {
         width: 100%;
-        padding: 8px;
-        margin-bottom: 5px;
-        background-color: #4caf50;
-        color: white;
+        padding: 10px;
+        margin-bottom: 8px;
         border: none;
+        border-radius: 6px;
+        font-size: 14px;
+        font-weight: 500;
+        color: white;
+        cursor: pointer;
+        background: linear-gradient(45deg, #4caf50, #66bb6a);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        transition: transform 0.1s, box-shadow 0.1s;
       }
       button:hover {
-        background-color: #45a049;
+        transform: translateY(-1px);
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+      }
+      button:active {
+        transform: translateY(0);
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
       }
       #stopBtn {
-        background-color: #f44336;
+        background: linear-gradient(45deg, #f44336, #ef5350);
       }
-      #stopBtn:hover {
-        background-color: #da190b;
+      #status {
+        margin: 10px 0 0;
+        font-size: 12px;
+        text-align: center;
+        color: #666;
+      }
+      body.dark #status {
+        color: #bbb;
       }
     </style>
   </head>
   <body>
-    <h3>Custom Whisper Settings</h3>
-    <label>Custom Endpoint URL:</label>
+    <h3>Whisper Dictation</h3>
+    <label>Endpoint URL</label>
     <input
       type="text"
       id="endpointUrl"
-      placeholder="e.g., https://yourserver.com/v1/audio/transcriptions"
+      placeholder="https://yourserver.com/v1/audio/transcriptions"
     />
-    <label>API Key:</label>
+    <label>API Key</label>
     <input type="text" id="apiKey" placeholder="Enter your API key" />
-    <label>Model:</label>
+    <label>Model</label>
     <input type="text" id="model" placeholder="e.g., tiny, custom-model" />
     <button id="saveBtn">Save Settings</button>
-    <button id="startBtn">Start Dictation to Textarea</button>
+    <button id="startBtn">Start Dictation</button>
     <button id="stopBtn">Stop Dictation</button>
     <p id="status"></p>
     <script src="popup.js"></script>
+    <script>
+      // Dynamic dark mode
+      if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
+        document.body.classList.add("dark");
+      }
+      window
+        .matchMedia("(prefers-color-scheme: dark)")
+        .addEventListener("change", (e) => {
+          document.body.classList.toggle("dark", e.matches);
+        });
+    </script>
   </body>
 </html>
